# agent-recipes

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml
javascript/: package.json  pnpm-lock.yaml  tsconfig.json
javascript/src/: basic.ts  evaluator-optimizer.ts  orchestrator-worker.ts  parallelization.ts  prompt-chaining.ts  routing.ts  tool-calling.ts
javascript/src/rag/: app.ts  ingest.ts
python/langchain/: basics.py  evaluator_optimizer.py  orchestrator_workers.py  parallelization.py  prompt_chaining.py  routing.py  structured_output.py  tool_calling.py
python/langchain/rag/: app.py  ingest.py
python/langgraph/: evaluator_optimzer.py  orchestrator_workers.py  parallelization.py  prompt_chaining.py  routing.py
