[project]
name = "agent-recipes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "langchain>=0.3.14",
    "langchain-chroma>=0.2.1",
    "langchain-community>=0.3.14",
    "langchain-core>=0.3.30",
    "langchain-docling>=0.2.0",
    "langchain-ollama>=0.2.3",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.63",
    "langsmith>=0.2.11",
]
